comecei a escrever o conteudo

--- a/index.html
+++ b/index.html
@@ -9,16 +9,16 @@
   <body>
     <main>
       <header>
-        <h1>Titulo do Site</h1>
+        <h1>Cursos Grátis</h1>
       </header>
       <article>
-        <h2>Titulo do Artigo 001</h2>
-        <p>Texto do Artigo 002</p>
+        <h2>Curso de HTML5 com CSS3</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil laborum, quis odit deleniti laboriosam maxime officiis ad, voluptate voluptatibus rem quod, odio temporibus quas similique ut! At eveniet odio numquam?</p>
       </article>
 
       <article>
-        <h2>Titulo do Artigo 002</h2>
-        <p>Texto do Artigo 002</p>
+        <h2>Curso de JavaScript</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum magni laudantium, iusto rerum officia praesentium est atque. Eius, laboriosam perferendis, distinctio incidunt consequatur possimus quod quisquam laborum sapiente deleniti voluptates!</p>
       </article>
     </main>
   </body>
