--- a/index.html
+++ b/index.html
@@ -11,15 +11,20 @@
     <main>
       <header>
         <h1>Cursos Grátis</h1>
+        <img src="imagens/curso-em-video-cor.png" alt="Curso em Video">
       </header>
       <article>
         <h2>Curso de HTML5 com CSS3</h2>
+        <img class= 'lado' src="imagens/curso-html-css.png" alt="Curso HTML CSS">
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil laborum, quis odit deleniti laboriosam maxime officiis ad, voluptate voluptatibus rem quod, odio temporibus quas similique ut! At eveniet odio numquam?</p>
+      <p><a href="curso-html.html">Acesse o curso de HTML5</a></p>
       </article>
 
       <article>
         <h2>Curso de JavaScript</h2>
+        <img class= 'lado' src="imagens/curso-javascript.png" alt="Curso JavaScript">
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum magni laudantium, iusto rerum officia praesentium est atque. Eius, laboriosam perferendis, distinctio incidunt consequatur possimus quod quisquam laborum sapiente deleniti voluptates!</p>
+        <p><a href="curso-js.html">Acesse o curso de JavaScript</a></p>
       </article>
     </main>
   </body>
