--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
       <article>
         <h2>Curso de HTML5 com CSS3</h2>
         <img class= 'lado' src="imagens/curso-html-css.png" alt="Curso HTML CSS">
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil laborum, quis odit deleniti laboriosam maxime officiis ad, voluptate voluptatibus rem quod, odio temporibus quas similique ut! At eveniet odio numquam?</p>
+        <p>A HTML é uma linguagem de marcação para a criação de sites. Atualmente na versão 5, ela usa a semântica dos elementos para criar o conteúdo de uma página Web. Com as CSS, criamos as configurações visuais que um site vai ter.</p>
       <p><a href="curso-html.html">Acesse o curso de HTML5</a></p>
       </article>
 
       <article>
         <h2>Curso de JavaScript</h2>
         <img class= 'lado' src="imagens/curso-javascript.png" alt="Curso JavaScript">
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum magni laudantium, iusto rerum officia praesentium est atque. Eius, laboriosam perferendis, distinctio incidunt consequatur possimus quod quisquam laborum sapiente deleniti voluptates!</p>
+        <p>JavaScript é uma linguagem de script criada para aumentar a interatividade entre um site e seus visitantes. Os códigos em JS são executados dentro do navegador e dão acesso aos elementos HTML por meio do DOM.</p>
         <p><a href="curso-js.html">Acesse o curso de JavaScript</a></p>
       </article>
     </main>
