--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <h2>Curso de HTML5 com CSS3</h2>
         <img class= 'lado' src="imagens/curso-html-css.png" alt="Curso HTML CSS">
         <p>A HTML é uma linguagem de marcação para a criação de sites. Atualmente na versão 5, ela usa a semântica dos elementos para criar o conteúdo de uma página Web. Com as CSS, criamos as configurações visuais que um site vai ter.</p>
-      <p><a href="curso-html.html">Acesse o curso de HTML5</a></p>
+      <p><a href="curso-html.html">Acesse o curso de HTML5 e CSS3</a></p>
       </article>
 
       <article>
